src/test/ui/pattern/bindings-after-at/default-binding-modes-both-sides-independent.stderr
error: cannot move out of `a` because it is borrowed
  --> $DIR/default-binding-modes-both-sides-independent.rs:28:9
   |
LL |     let ref a @ b = NotCopy;
   |         -----^^^-
   |         |       |
   |         |       move out of `a` occurs here
   |         borrow of `a` occurs here

error: cannot move out of `a` because it is borrowed
  --> $DIR/default-binding-modes-both-sides-independent.rs:31:9
   |
LL |     let ref mut a @ b = NotCopy;
   |         ---------^^^-
   |         |           |
   |         |           move out of `a` occurs here
   |         borrow of `a` occurs here

error: cannot move out of `a` because it is borrowed
  --> $DIR/default-binding-modes-both-sides-independent.rs:36:12
   |
LL |         Ok(ref a @ b) | Err(b @ ref a) => {
   |            -----^^^-
   |            |       |
   |            |       move out of `a` occurs here
   |            borrow of `a` occurs here

error: borrow of moved value: `b`
  --> $DIR/default-binding-modes-both-sides-independent.rs:36:29
   |
LL |         Ok(ref a @ b) | Err(b @ ref a) => {
   |                             -^^^-----
   |                             |   |
   |                             |   value borrowed here after move
   |                             value moved here
   |                             move occurs because `b` has type `main::NotCopy` which does implement the `Copy` trait

error: cannot move out of `a` because it is borrowed
  --> $DIR/default-binding-modes-both-sides-independent.rs:44:9
   |
LL |         ref a @ b => {
   |         -----^^^-
   |         |       |
   |         |       move out of `a` occurs here
   |         borrow of `a` occurs here

error[E0505]: cannot move out of `_` because it is borrowed
  --> $DIR/default-binding-modes-both-sides-independent.rs:31:21
   |
LL |     let ref mut a @ b = NotCopy;
   |         ------------^
   |         |           |
   |         |           move out of value occurs here
   |         borrow of value occurs here
LL |
LL |     let _a: &NotCopy = a;
   |                        - borrow later used here

error: aborting due to 6 previous errors

For more information about this error, try `rustc --explain E0505`.
